tkg_tmc_to/cluster-1/sample-app/react-app/react-app-kubernetes/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: test
    version: v1
  name: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
      version: v1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test
        version: v1
    spec:
      containers:
        # user later yogendra/tmc-cluster-autoscaler:1e29f3d
        - image: yogendra/tmc-cluster-autoscaler:a041da2
          name: test
          ports:
            - name: http
              containerPort: 5000
