tkg_tmc_to/cluster-1/sample-app/react-app/react-app-kubernetes/k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test
  labels:
    app: test
    version: v1
spec:
  rules:
    - host: test.cluster-1.poc.yogendra.me
      http:
        paths:
          - backend:
              serviceName: test
              servicePort: http
